// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a desktop employee panel 1`] = `
<div
  className="employee-panel-container ui segment"
>
  <div
    className="header"
    onClick={null}
    role="button"
    tabIndex={0}
  >
    <span
      className="titleText"
    >
      Leena Razzaq
    </span>
    <span
      className="classGlobeLink"
    >
      <a
        className="inlineBlock"
        data-tip="View on neu.edu"
        href="https://www.ccis.northeastern.edu/people/leena-razzaq/"
        key="0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="globe"
          src="file"
        />
      </a>
    </span>
  </div>
  <div
    className="body"
    style={
      Object {
        "display": false,
        "padding": 20,
      }
    }
  >
    <div
      className="inlineBlock contact-box"
    >
      Assistant Teaching Professor
      <br
        key="0"
      />
      CCIS
      <br
        key="1"
      />
      <a
        href="https://www.ccis.northeastern.edu/people/leena-razzaq/"
        key="link"
        rel="noopener noreferrer"
        target="_blank"
      >
        NEU Profile
      </a>
      <br
        key="2"
      />
      <a
        href="http://www.ccs.neu.edu/home/lrazzaq/"
        key="personalSite"
        rel="noopener noreferrer"
        target="_blank"
      >
        Personal Website
      </a>
    </div>
    <div
      className="employee-panel-second-column"
    >
      132C Nightingale Hall
      <br
        key="0"
      />
      <a
        className="employeeEmail"
        data-tip=""
        key="l.razzaq@northeastern.edu"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        tabIndex={0}
      >
        l.razzaq@northeastern.edu
      </a>
      <br
        key="1"
      />
      <a
        className="employeeEmail"
        data-tip=""
        key="lrazzaq@ccs.neu.edu"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        tabIndex={0}
      >
        lrazzaq@ccs.neu.edu
      </a>
      <br
        key="2"
      />
      <a
        className="employeePhone"
        data-tip=""
        key="tel"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        tabIndex={0}
      >
        617-373-5797
      </a>
    </div>
  </div>
</div>
`;

exports[`should render a mobile employee panel 1`] = `
<div
  className="employee-panel-container ui segment"
>
  <div
    className="header"
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <img
      alt=""
      className="chevron"
      src="file"
    />
    <span
      className="titleText"
    >
      Leena Razzaq
    </span>
  </div>
  <div
    className="body"
    style={
      Object {
        "display": "none",
        "padding": 20,
      }
    }
  >
    <div
      className="inlineBlock contact-box"
    >
      Assistant Teaching Professor
      <br
        key="0"
      />
      CCIS
      <br
        key="1"
      />
      132C Nightingale Hall
      <br
        key="2"
      />
      <a
        className="employeeEmail"
        data-tip=""
        href="mailto:l.razzaq@northeastern.edu"
        key="l.razzaq@northeastern.edu"
        role="button"
        tabIndex={0}
      >
        l.razzaq@northeastern.edu
      </a>
      <br
        key="3"
      />
      <a
        className="employeeEmail"
        data-tip=""
        href="mailto:lrazzaq@ccs.neu.edu"
        key="lrazzaq@ccs.neu.edu"
        role="button"
        tabIndex={0}
      >
        lrazzaq@ccs.neu.edu
      </a>
      <br
        key="4"
      />
      <a
        className="employeePhone"
        data-tip=""
        href="tel:6173735797"
        key="tel"
        role="button"
        tabIndex={0}
      >
        617-373-5797
      </a>
    </div>
    <div
      className="employee-panel-second-column"
    >
      <a
        href="http://www.ccs.neu.edu/home/lrazzaq/"
        key="personalSite"
        rel="noopener noreferrer"
        target="_blank"
      >
        Personal Website
      </a>
    </div>
  </div>
</div>
`;
